fixed navbar responsiveness, homepage alignment

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -74,11 +74,23 @@ $border-radius-sm: 2px;
 }
 
 #search_category {
-  width: 300px;
+  width: 100%;
   height: 40px;
   border: 2px solid $green;
   background-color: $white;
   margin: 10px 10px 10px 0px;
+  border-bottom-right-radius: 0px!important;
+  border-top-left-radius: 15px!important;
+  border-bottom-left-radius: 0px!important;
+  border-top-right-radius: 0px!important;
+}
+
+.form-control {
+  width: 70%!important;
+  height: 40px!important;
+  border: 2px solid $green!important;
+  background-color: $white!important;
+  // margin: 10px 10px 10px 0px;
   border-bottom-right-radius: 0px!important;
   border-top-left-radius: 15px!important;
   border-bottom-left-radius: 0px!important;
@@ -109,5 +121,13 @@ a:hover, a:visited, a:focus {
   }
   &:hover {
     text-decoration: none;
+  }
+}
+
+@media (max-width: 453px) {
+  .footer {
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 10px;
   }
 }
