--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,13 +7,13 @@
   background-color: $light-gray;
   h1 {
     font-size: 5rem;
-    line-height: 5rem;
-    padding-bottom: 2rem;
+    line-height: 4rem;
     color: $green;
   }
   p {
-    font-size: 2rem;
-    line-height: 2rem;
+    font-size: 20px;
+    line-height: 20px;
+    color: $gray;
   }
 }
 
@@ -80,10 +80,15 @@
     flex-direction: column;
     align-items: center;
     padding: 10px;
-    width: 300px;
+    width: 100%;
   }
   #hero {
     align-items: left;
+    h1 {
+      font-size: 4rem;
+      line-height: 4rem;
+    }
+    padding: 10px;
   }
   .hero-image {
     width: 100%;
